# stablecoin-system

./: .gitignore  CLAUDE.md  PROGRESS.md  REVIEW.md  exp1_accounts.csv  exp3_e2e_v2.csv  prd.md  run_distributed.sh  summary.md  summary_zh.md  thesis_experiments.md  thesis_leap.md  thesis_mp3bft.md
e2e/: Cargo.toml
e2e/src/: lib.rs  main.rs  pipeline.rs  tests.rs
experiments/exp1_execution/: ANALYSIS.md  REPORT.md  plot.py  plot_correctness.py  run_accounts.sh  run_all.sh
experiments/exp2_consensus/: REPORT.md  plot_narwhal.py  plot_simulator.py  run_all.sh  run_simulator.sh
experiments/exp3_e2e/: REPORT.md  plot.py  plot_complete.py  run_all.sh  run_e2e_realistic.py
leap/: BLOCK_STM_ANALYSIS.md  Cargo.toml  exp1_accounts.csv
leap/benches/: leap_bench.rs
leap/src/: backpressure.rs  cado.rs  config.rs  domain_plan.rs  errors.rs  executor.rs  hot_delta.rs  lib.rs  main.rs  mvmemory.rs  outcome_array.rs  scheduler.rs  stablecoin.rs  task.rs  tests.rs  txn_last_input_output.rs
mp3bft/: Cargo.toml  NARWHAL_ANALYSIS.md
mp3bft/src/: cado.rs  config.rs  data_plane.rs  lib.rs  main.rs  tests.rs  types.rs
mp3bft/src/control_plane/: anti_duplication.rs  macro_layer.rs  mod.rs  slot_layer.rs  view_change.rs
narwhal/benchmark/: .gitignore  fabfile.py  quick_latency_test.py  run_comparison.py  run_distributed_exp2.py  run_distributed_exp3.py  run_e2e.py  run_e2e_complete.py  run_e2e_highload.py  run_e2e_threads.py  run_e2e_v2.py  run_fault_tolerance.py  run_quick_verify.py  run_saturation.py  run_smoke_test.py
narwhal/consensus/: Cargo.toml
(+26 files in other folders)
