[package]
name = "mp3bft"
version = "0.1.0"
edition = "2021"
description = "MP3-BFT++: execution-aware multi-proposer BFT consensus with data/control plane separation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
leap = { path = "../leap" }

[[bin]]
name = "mp3bft_benchmark"
path = "src/main.rs"
